--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,12 @@ android {
         exclude 'META-INF/ASL2.0'
         exclude 'META-INF/*.kotlin_module'
     }
+    buildFeatures {
+        compose false
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.4.0"
+    }
 }
 
 dependencies {
